--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>com.plydot.mtnmomoapi</groupId>
+            <groupId>com.plydot</groupId>
             <artifactId>mtnmomoapi</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.7</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
